--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -23,25 +23,21 @@
   position: absolute;
   top: 10%;
   display: flex;
-  vertical-align: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   width: 100%;
 }
 
-/*.Card {
+.Card {
   vertical-align:middle;
   list-style-type: none;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #e1e8ed;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  min-width:250px;
-  padding: 15px;
-  width: 20%;
-  margin: 20px;
   z-index: -1;
-}*/
+}
